updated kitty and nvim on ubuntu 24

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,6 +8,19 @@ italic_font auto
 bold_italic_font auto
 font_size 9.5
 
+# BEGIN_KITTY_THEME
+# Catppuccin-Mocha
+include current-theme.conf
+
+tab_bar_min_tabs            2
+tab_bar_edge                bottom
+tab_bar_style               powerline
+tab_powerline_style         slanted
+tab_title_template          "smutbox"
+
+shell_integration disabled
+# END_KITTY_THEME
+
 # window shit
 start_as_fullscreen no
 remember_window_size no
@@ -27,15 +40,3 @@ map kitty_mod+j no_op
 map kitty_mod+k no_op
 map kitty_mod+l no_op
 
-# BEGIN_KITTY_THEME
-# Catppuccin-Mocha
-include current-theme.conf
-
-tab_bar_min_tabs            2
-tab_bar_edge                bottom
-tab_bar_style               powerline
-tab_powerline_style         slanted
-tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
-
-shell_integration disabled
-# END_KITTY_THEME
